# osu_oracle

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit.config.yaml  3q  LICENSE  README.md  classes.py  docker-compose.yml  dynamoDB_test.ipynb  mypy.ini  pickle.leaderboard_ids  players.ipynb  pyproject.toml  requirements.txt  scrape_maps.py  scrape_users.ipynb  scrape_users.py
.github/workflows/: formatters.yml  hygiene.yml
Backend/: README.md  logging_config.py  main.py  models.py  package-lock.json  pyproject.toml
Frontend/: package-lock.json  package.json  pnpm-lock.yaml
Frontend/src/: app.html
Frontend/src/lib/components/: navbar.svelte
Frontend/src/routes/: +page.svelte
Models/: compress_models.sh  nearest_neighbors.ipynb  nearest_neighbors.py  w2v_embeddings.ipynb
Models/w2v_model/: w2v_model
Scripts/: db.py  db_api.py  db_init.py  get_users.py  models.py  oracle-dev.db  osu_auth.py  pyproject.toml  test.ipynb
Scripts/Item/: test.ipynb
backend/: app.py
backend/static/: script.js
backend/static/stylesheet/: main.css
backend/templates/: index.html  wip.html
data/: __init__.py  classes.py  make_tables.ipynb  to_parquet.ipynb
data_collection/: __init__.py  client.py  get_beatmaps.py  get_user_ids.py  get_user_scores.py  get_users.py  get_users_and_scores.py  get_users_scores.py
data_collector/: Dockerfile  collectors.py  pyproject.toml
database/: Dockerfile  classes.py  hiscore_updates.parquet:Zone.Identifier
db/: crud.py
db/orm/: __init__.py  models.py  setup.py
ml_trainer/: Dockerfile  requirements.txt
osu_oracle/: models.py
osu_oracle/templates/: wip.html
scraper/: requirements.txt  scrape_beatmapsets.ipynb  scrape_maps.py  scrape_users.py
scraping/: completed_user_ids.pickle  leaderboard_ids.pickle  make_tables.ipynb  scrape_beatmaps.ipynb  scrape_beatmapsets.ipynb  scrape_maps.ipynb  scrape_maps.py  scrape_user_ids.py  scrape_user_plays.ipynb  scrape_user_scores.ipynb  scrape_user_topscores.ipynb  scrape_users.py
scratch/: run_collectors.ipynb  tables.ipynb  test.ipynb
web_app/: Dockerfile  requirements.txt
webpage/: app.py
webpage/static/: script.js
webpage/static/stylesheet/: main.css
webpage/templates/: help.html  index.html  wip.html
