[tool.poetry]
name = "osu-oracle"
version = "0.1.0"
description = ""
authors = ["Michael Deng <michaeldeng2003@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ossapi = "^4.0.0"
scikit-learn = "^1.5.1"
gensim = "^4.3.3"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.32"


[tool.poetry.group.website.dependencies]
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"
flake8 = "^7.1.1"
bandit = "^1.7.9"
pre-commit = "^3.8.0"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
