[project]
name = "osu-oracle"
version = "0.1.0"
description = ""
authors = [{ name = "Michael Deng", email = "michaeldeng2003@gmail.com" }]
requires-python = "==3.11.9"
readme = "README.md"
dependencies = [
    "ossapi==4.0.0",
    "scikit-learn==1.5.1",
    "gensim==4.3.3",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.34",
    "sqlmodel==0.0.22",
    "pycountry==24.6.1",
]

[dependency-groups]
website = ["flask==3.0.3"]
dev = [
    "jupyterlab==4.2.5",
    "black==24.4.2",
    "flake8==7.1.0",
    "isort==5.13.2",
    "bandit==1.7.9",
    "pre-commit==3.7.1",
    "mypy==1.11.2",
    "alembic==1.13.2",
    "ruff>=0.11.6",
]

[tool.uv]
default-groups = [
    "website",
    "dev",
]

[tool.hatch.build.targets.sdist]
include = ["osu_oracle"]

[tool.hatch.build.targets.wheel]
include = ["osu_oracle"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
