[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clr>=1.0.3",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "pythonnet>=3.0.5",
    "sqlmodel>=0.0.27",
]
