[tool.poetry]
name = "data-collector"
version = "0.1.0"
description = "Uses osu!api v2 to collect data."
authors = ["Michael Deng <michaeldeng2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
